[tryFilterByDataParam] change dataAttributes